--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -974,6 +974,9 @@ input, select {
           bottom: 0;
           left: auto;
           right: 4.51389vw; } }
+    @media screen and (min-width: 800px) {
+      .hidarikikinoEren .lp-kv .mod-title1 {
+        padding-bottom: 0; } }
     .hidarikikinoEren .lp-kv .mod-title1 img {
       width: 5.73333vw; }
       @media screen and (min-width: 800px) {
@@ -1002,6 +1005,9 @@ input, select {
         padding-top: 2.08333vw;
         padding-left: 7.01389vw;
         padding-right: 4.51389vw; } }
+    @media screen and (min-width: 800px) and (max-width: 1100px) {
+      .hidarikikinoEren .lp-summery {
+        display: block; } }
     .hidarikikinoEren .lp-summery_heading {
       position: relative;
       background-color: #deff00;
@@ -1029,6 +1035,12 @@ input, select {
           width: 50%;
           height: 28.19444vw;
           overflow: visible; } }
+      @media screen and (min-width: 800px) and (max-width: 1100px) {
+        .hidarikikinoEren .lp-summery_heading {
+          width: 100%;
+          height: 451.17117px;
+          background-image: url("../../../data/hidari-kikino-eren/images/summary_header_bg_l.jpg");
+          background-position: 50% 50%; } }
     .hidarikikinoEren .lp-summery_headingInner {
       position: relative;
       z-index: 1;
@@ -1036,6 +1048,9 @@ input, select {
       @media screen and (min-width: 800px) {
         .hidarikikinoEren .lp-summery_headingInner {
           left: -2.43056vw; } }
+      @media screen and (min-width: 800px) and (max-width: 1100px) {
+        .hidarikikinoEren .lp-summery_headingInner {
+          left: 25.94595px; } }
       .hidarikikinoEren .lp-summery_headingInner > h2 {
         position: absolute;
         top: -3.33333vw;
@@ -1050,12 +1065,27 @@ input, select {
             top: -1.38889vw;
             left: 1.38889vw;
             width: 3.92361vw; } }
+        @media screen and (min-width: 800px) and (max-width: 1100px) {
+          .hidarikikinoEren .lp-summery_headingInner > h2 {
+            padding: 1.94595vw 1.62162vw;
+            top: -2.16216vw;
+            left: 2.16216vw;
+            width: 6.10811vw;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center; } }
         .hidarikikinoEren .lp-summery_headingInner > h2 img {
           display: block;
           width: 3.86667vw; }
           @media screen and (min-width: 800px) {
             .hidarikikinoEren .lp-summery_headingInner > h2 img {
               width: 1.49306vw; } }
+          @media screen and (min-width: 800px) and (max-width: 1100px) {
+            .hidarikikinoEren .lp-summery_headingInner > h2 img {
+              width: 2.32432vw; } }
     .hidarikikinoEren .lp-summery_headingDesc {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -1089,6 +1119,9 @@ input, select {
         .hidarikikinoEren .lp-summery_descLine {
           padding-left: 8em;
           font-size: .90278vw; } }
+      @media screen and (min-width: 800px) and (max-width: 1100px) {
+        .hidarikikinoEren .lp-summery_descLine {
+          font-size: 1.40541vw; } }
       .hidarikikinoEren .lp-summery_descLine:after {
         content: '';
         position: absolute;
@@ -1102,6 +1135,9 @@ input, select {
         .hidarikikinoEren .lp-summery_relationship {
           width: 50%;
           top: 2.70833vw; } }
+      @media screen and (min-width: 800px) and (max-width: 1100px) {
+        .hidarikikinoEren .lp-summery_relationship {
+          width: 100%; } }
       .hidarikikinoEren .lp-summery_relationship:before {
         content: "";
         display: block;
@@ -1181,6 +1217,9 @@ input, select {
           width: 44.44444vw;
           padding: .41667vw .41667vw 0;
           cursor: pointer; } }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-story_tab:hover .tab_inner > span {
+          color: #e50013; } }
       .hidarikikinoEren .lp-story_tab:nth-child(1) {
         left: 4vw; }
         @media screen and (min-width: 800px) {
@@ -1283,8 +1322,15 @@ input, select {
         display: block; }
     .hidarikikinoEren .lp-story_pages.mod-prologue:after {
       content: '※本作品は、2019年10月19日（土）に\A cakesにて掲載されたものになります。'; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-story_pages.mod-prologue:after {
+          content: '※本作品は、2019年10月19日（土）にcakesにて掲載されたものになります。';
+          font-size: 1.62162vw; } }
     .hidarikikinoEren .lp-story_pages.mod-main:after {
-      content: '※本作品は、2019年10月20日(日）に\A朝日新聞 全国朝刊にて掲載されたものになります。'; }
+      content: '※本作品は、2019年10月20日(日）に朝日新聞 全国朝刊にて掲載されたものになります。'; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-story_pages.mod-main:after {
+          font-size: 1.62162vw; } }
     .hidarikikinoEren .lp-story_pages.add-active {
       display: block;
       -webkit-animation-name: show;
@@ -1338,6 +1384,12 @@ input, select {
     width: 100%;
     max-width: 1455.55556px;
     margin: 18.66667vw auto auto; }
+    @media screen and (min-width: 800px) {
+      .hidarikikinoEren .lp-result {
+        width: auto;
+        margin-left: 4.51389vw;
+        margin-right: 4.51389vw;
+        margin-top: 8.33333vw; } }
     .hidarikikinoEren .lp-result_bgWrap {
       position: absolute;
       left: 0;
@@ -1364,6 +1416,12 @@ input, select {
         height: 100%;
         background-repeat: repeat-x;
         background-size: 327.45725vw 57.86667vw; }
+        @media screen and (min-width: 800px) {
+          .hidarikikinoEren .lp-result .bgItem:before {
+            background-size: 133.61111vw 23.61111vw; } }
+        @media screen and (min-width: 1600px) {
+          .hidarikikinoEren .lp-result .bgItem:before {
+            background-size: 2137.77778px 377.77778px; } }
 
 @-webkit-keyframes moveBgRight {
   0% {
@@ -1377,6 +1435,30 @@ input, select {
   100% {
     background-position: 327.45725vw; } }
 
+@-webkit-keyframes moveBgRightL {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: 133.61111vw; } }
+
+@keyframes moveBgRightL {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: 133.61111vw; } }
+
+@-webkit-keyframes moveBgRightLL {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: 2137.77778px; } }
+
+@keyframes moveBgRightLL {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: 2137.77778px; } }
+
 @-webkit-keyframes moveBgLeft {
   0% {
     background-position: 0; }
@@ -1388,42 +1470,92 @@ input, select {
     background-position: 0; }
   100% {
     background-position: -327.45725vw; } }
+
+@-webkit-keyframes moveBgLeftL {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -133.61111vw; } }
+
+@keyframes moveBgLeftL {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -133.61111vw; } }
+
+@-webkit-keyframes moveBgLeftLL {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -2137.77778px; } }
+
+@keyframes moveBgLeftLL {
+  0% {
+    background-position: 0; }
+  100% {
+    background-position: -2137.77778px; } }
     .hidarikikinoEren .lp-result .mod-top {
       background-color: #0e6cb2; }
       .hidarikikinoEren .lp-result .mod-top:before {
         background-image: url("../../../data/hidari-kikino-eren/images/result_bg1.jpg");
         -webkit-animation: moveBgRight 30s linear infinite;
         animation: moveBgRight 30s linear infinite; }
+        @media screen and (min-width: 800px) {
+          .hidarikikinoEren .lp-result .mod-top:before {
+            -webkit-animation: moveBgRightL 30s linear infinite;
+            animation: moveBgRightL 30s linear infinite; } }
+        @media screen and (min-width: 1600px) {
+          .hidarikikinoEren .lp-result .mod-top:before {
+            -webkit-animation: moveBgRightLL 30s linear infinite;
+            animation: moveBgRightLL 30s linear infinite; } }
     .hidarikikinoEren .lp-result .mod-bottom {
       background-color: #deff00; }
       .hidarikikinoEren .lp-result .mod-bottom:before {
         background-image: url("../../../data/hidari-kikino-eren/images/result_bg2.jpg");
         -webkit-animation: moveBgLeft 30s linear infinite;
         animation: moveBgLeft 30s linear infinite; }
+        @media screen and (min-width: 800px) {
+          .hidarikikinoEren .lp-result .mod-bottom:before {
+            -webkit-animation: moveBgLeftL 30s linear infinite;
+            animation: moveBgLeftL 30s linear infinite; } }
+        @media screen and (min-width: 1600px) {
+          .hidarikikinoEren .lp-result .mod-bottom:before {
+            -webkit-animation: moveBgLeftLL 30s linear infinite;
+            animation: moveBgLeftLL 30s linear infinite; } }
     .hidarikikinoEren .lp-result_inner {
       position: relative;
       z-index: 3;
       padding: 18.26667vw 4vw 25.33333vw; }
-    .hidarikikinoEren .lp-result .lp-resultTitle, .hidarikikinoEren .lp-result .lp-resultDate {
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-result_inner {
+          padding: 9.96528vw 13.47222vw 10.17361vw; } }
+    .hidarikikinoEren .lp-result .lp-resultTitle {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      -webkit-box-align: start;
-      -ms-flex-align: start;
-      align-items: flex-start;
-      z-index: 2; }
-    .hidarikikinoEren .lp-result .lp-resultTitle {
+      z-index: 2;
       margin-bottom: 4vw; }
+      @media screen and (max-width: 799px) {
+        .hidarikikinoEren .lp-result .lp-resultTitle {
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+          flex-direction: column;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          justify-content: center;
+          -webkit-box-align: start;
+          -ms-flex-align: start;
+          align-items: flex-start; } }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-result .lp-resultTitle {
+          margin-bottom: 1.66667vw; } }
       .hidarikikinoEren .lp-result .lp-resultTitle_inner {
         height: 13.6vw;
         margin-top: -.1em; }
+        @media screen and (min-width: 800px) {
+          .hidarikikinoEren .lp-result .lp-resultTitle_inner {
+            height: 5.45139vw; } }
       .hidarikikinoEren .lp-result .lp-resultTitle_inner img {
         display: block;
         height: 100%;
@@ -1447,6 +1579,9 @@ input, select {
       align-items: flex-start;
       margin-bottom: 9vw;
       z-index: 2; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-result .lp-resultDesc {
+          margin-bottom: 20.48611vw; } }
       .hidarikikinoEren .lp-result .lp-resultDesc_line {
         position: relative;
         color: #fff;
@@ -1463,6 +1598,12 @@ input, select {
         transform: scaleX(0.9);
         -webkit-transform-origin: center left;
         transform-origin: center left; }
+        @media screen and (min-width: 800px) {
+          .hidarikikinoEren .lp-result .lp-resultDesc_line {
+            font-size: 1.86458vw;
+            line-height: 1.3;
+            padding: .1em .2em;
+            white-space: nowrap; } }
       .hidarikikinoEren .lp-result .lp-resultDesc_line:after {
         content: "";
         position: absolute;
@@ -1481,6 +1622,12 @@ input, select {
       top: 58vw;
       right: 6.53333vw;
       z-index: 4; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-result .lp-resultLogo {
+          width: 14.58333vw;
+          height: 16.5625vw;
+          top: 26.66667vw;
+          right: 13.78472vw; } }
     .hidarikikinoEren .lp-result .lp-resultImg1, .hidarikikinoEren .lp-result .lp-resultImg2 {
       position: absolute; }
     .hidarikikinoEren .lp-result .lp-resultImg1 {
@@ -1490,21 +1637,60 @@ input, select {
       right: 7.46667vw;
       -webkit-transform: rotate(-3.5deg);
       transform: rotate(-3.5deg); }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-result .lp-resultImg1 {
+          width: 22.04861vw;
+          height: 15.03472vw;
+          top: 27.77778vw;
+          left: 16.04167vw;
+          bottom: auto;
+          right: auto; } }
     .hidarikikinoEren .lp-result .lp-resultImg2 {
       width: 42vw;
       height: 29.6vw;
       bottom: 6.93333vw;
       right: 5.73333vw; }
-    .hidarikikinoEren .lp-result .lp-resultDate_label {
-      background-color: #e50013;
-      position: relative;
-      height: 8.4vw;
-      z-index: inherit; }
-    .hidarikikinoEren .lp-result .lp-resultDate_day {
-      height: 13.6vw;
-      margin-top: -.1em;
-      z-index: inherit; }
-    .hidarikikinoEren .lp-result .lp-resultDate_label img, .hidarikikinoEren .lp-result .lp-resultDate_day img {
-      display: block;
-      height: 100%;
-      width: auto; }
+      @media screen and (min-width: 800px) {
+        .hidarikikinoEren .lp-result .lp-resultImg2 {
+          width: 28.47222vw;
+          height: 20.3125vw;
+          top: 28.19444vw;
+          left: 37.98611vw;
+          bottom: auto;
+          right: auto;
+          -webkit-transform: rotate(3deg);
+          transform: rotate(3deg); } }
+    .hidarikikinoEren .lp-result .lp-resultDate {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: start;
+      -ms-flex-align: start;
+      align-items: flex-start;
+      z-index: 2; }
+      .hidarikikinoEren .lp-result .lp-resultDate_label {
+        background-color: #e50013;
+        position: relative;
+        height: 8.4vw;
+        z-index: inherit; }
+        @media screen and (min-width: 800px) {
+          .hidarikikinoEren .lp-result .lp-resultDate_label {
+            height: 5.10417vw; } }
+      .hidarikikinoEren .lp-result .lp-resultDate_day {
+        height: 13.6vw;
+        margin-top: -.1em;
+        z-index: inherit; }
+        @media screen and (min-width: 800px) {
+          .hidarikikinoEren .lp-result .lp-resultDate_day {
+            height: 9.58333vw; } }
+      .hidarikikinoEren .lp-result .lp-resultDate_label img, .hidarikikinoEren .lp-result .lp-resultDate_day img {
+        display: block;
+        height: 100%;
+        width: auto; }
