--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -126,7 +126,7 @@
     transition: visibility .4s cubic-bezier(.19,1,.22,1),
                 opacity .4s cubic-bezier(.19,1,.22,1),
                 transform .4s cubic-bezier(.19,1,.22,1);
-    @include mediaQuery(smallDesktop) {
+    @include mediaQuery {
       height: 4.0625vw;
     }
   }
@@ -143,7 +143,7 @@
     width: 100%;
     height: 100%;
     animation: headerMovingS 6s linear infinite;
-    @include mediaQuery(smallDesktop) {
+    @include mediaQuery {
       background-size: 16.80556vw 4.0625vw;
       animation: headerMovingL 6s linear infinite;
     }
@@ -295,7 +295,7 @@
     @include mediaQuery(mobile) {
       transform: translateX(100%);
     }
-    @include mediaQuery(smallDesktop) {
+    @include mediaQuery {
       height: 4.0625vw;
       width: auto;
       opacity: 1;
@@ -546,7 +546,7 @@
       display: flex;
       align-items: flex-start;
       flex-direction: column;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         left: 4.51389vw;
       }
     }
@@ -557,7 +557,7 @@
       padding: .6em;
       display: flex;
       align-items: center;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         font-size: 3.125vw;
       }
     }
@@ -568,7 +568,7 @@
       height: 15.333vw;
       top: 2.6667vw;
       left: 2.6667vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: 22.74306vw;
         height: 5.20833vw;
         top: auto;
@@ -577,15 +577,21 @@
         right: 4.51389vw;
       }
     }
+
+    .mod-title1 {
+      @include mediaQuery {
+        padding-bottom: 0; 
+      }
+    }
     .mod-title1 img {
       width: 5.73333vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: 2.53472vw;
       }
     }
     .mod-title2 img {
       height: 5.6vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         height: 2.91667vw;
         width: auto;
       }
@@ -606,12 +612,15 @@
     width: 100%;
     max-width: 1600px;
     margin: 14.6667vw auto auto;
-    @include mediaQuery(smallDesktop) {
+    @include mediaQuery {
       display: flex;
       margin-top: 5.55556vw;
       padding-top: 2.08333vw;
       padding-left: 7.01389vw;
       padding-right: 4.51389vw;
+    }
+    @include mediaQuery(mediumDesktop) {
+      display: block;
     }
 
     &_heading {
@@ -627,10 +636,17 @@
       justify-content: center;
       align-items: flex-start;
       overflow: hidden;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: 50%;
         height: 28.19444vw;
         overflow: visible;
+      }
+      @include mediaQuery(mediumDesktop) {
+        width: 100%;
+        height: 451.17117px;
+        background-image: url('../../../data/hidari-kikino-eren/images/summary_header_bg_l.jpg');
+        background-position: 50% 50%;
+
       }
     }
 
@@ -638,8 +654,11 @@
       position: relative;
       z-index: 1;
       left: 4vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         left: -2.43056vw;
+      }
+      @include mediaQuery(mediumDesktop) {
+        left: 25.94595px;
       }
 
       > h2 {
@@ -650,18 +669,29 @@
         background-color: #000;
         padding: 3.2vw 2.66667vw;
         z-index: 2;
-        @include mediaQuery(smallDesktop) {
+        @include mediaQuery {
           padding: 1.25vw 1.04167vw;
           top: -1.38889vw;
           left: 1.38889vw;
           width: 3.92361vw;
         }
+        @include mediaQuery(mediumDesktop) {
+          padding: 1.94595vw 1.62162vw;
+          top: -2.16216vw;
+          left: 2.16216vw;
+          width: 6.10811vw;
+          display: flex;
+          justify-content: center;
+        }
 
         img {
           display: block;
           width: 3.86667vw;
-          @include mediaQuery(smallDesktop) {
+          @include mediaQuery {
             width: 1.49306vw;
+          }
+          @include mediaQuery(mediumDesktop) {
+            width: 2.32432vw;
           }
         }
       }
@@ -687,9 +717,12 @@
       background-color: #deff00;
       transform-origin: top left;
       transform: scaleX(.9);
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         padding-left: 8em;
         font-size: .90278vw;
+      }
+      @include mediaQuery(mediumDesktop) {
+        font-size: 1.40541vw;
       }
 
       &:after {
@@ -706,9 +739,12 @@
     &_relationship {
       position: relative;
       width: 100%;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: 50%;
         top: 2.70833vw;
+      }
+      @include mediaQuery(mediumDesktop) {
+        width: 100%;
       }
       
       &:before {
@@ -739,7 +775,7 @@
     width: 100%;
     margin-top: 13.33333vw;
     padding-top: 5.33333vw;
-    @include mediaQuery(smallDesktop) {
+    @include mediaQuery {
       margin-top: 9.375vw;
       padding-top: 2.08333vw;
     }
@@ -749,7 +785,7 @@
       background-repeat: repeat;
       background-position: 50%;
       background-size: 360px 365px;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         background-size: 720px 730px;
       }
     }
@@ -757,7 +793,7 @@
     &_tabs {
       position: relative;
       height: 19.45946vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         height: 6.66667vw;
       }
 
@@ -770,7 +806,7 @@
         border-width: .8vw;
         border-bottom-style: solid;
         box-sizing: inherit;
-        @include mediaQuery(smallDesktop) {
+        @include mediaQuery {
           border-width: .20833vw;
         }
       }
@@ -812,21 +848,28 @@
       background-color: #000;
       padding: 1.2vw 1.2vw 0;
       z-index: 2;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: 44.44444vw;
         padding: .41667vw .41667vw 0;
         cursor: pointer;
       }
+      &:hover {
+        @include mediaQuery(smallDesktop){
+          .tab_inner > span {
+            color: #e50013;
+          }
+        }
+      }
       &:nth-child(1) {
         left: 4vw;
-        @include mediaQuery(smallDesktop) { //tab切り替えのstyle
+        @include mediaQuery { //tab切り替えのstyle
           left: auto;
           right: calc(50% + 1.04167vw);
         }
       }
       &:nth-child(2) {
         right: 4vw;
-        @include mediaQuery(smallDesktop) { //tab切り替えのstyle
+        @include mediaQuery { //tab切り替えのstyle
           right: auto;
           left: calc(50% + 1.04167vw);
         }
@@ -839,7 +882,7 @@
         height: .8vw;
         background-color: #deff00;
         bottom: 0;
-        @include mediaQuery(smallDesktop) {
+        @include mediaQuery {
           height: .20833vw;
         }
       }
@@ -853,7 +896,7 @@
       border-color: #deff00;
       padding: 0;
       pointer-events: none;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         border-width: .20833vw;
         cursor: default;
       }
@@ -864,7 +907,7 @@
 
       .tab_inner {
         border-color: transparent;
-        @include mediaQuery(smallDesktop) {
+        @include mediaQuery {
           border-width: .06944vw;
         }
       }
@@ -889,7 +932,7 @@
       font-weight: 500;
       letter-spacing: .14em;
       white-space: nowrap;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         font-size: 1.80556vw;
       }
 
@@ -949,10 +992,17 @@
 
     &_pages.mod-prologue:after {
       content: '※本作品は、2019年10月19日（土）に\A cakesにて掲載されたものになります。';
+      @include mediaQuery {
+        content: '※本作品は、2019年10月19日（土）にcakesにて掲載されたものになります。';
+        font-size: 1.62162vw;
+      }
     }
 
     &_pages.mod-main:after {
-      content: '※本作品は、2019年10月20日(日）に\A朝日新聞 全国朝刊にて掲載されたものになります。';
+      content: '※本作品は、2019年10月20日(日）に朝日新聞 全国朝刊にて掲載されたものになります。';
+      @include mediaQuery {
+        font-size: 1.62162vw;
+      }
     }
 
     &_pages.add-active {
@@ -973,7 +1023,7 @@
   .lp-story.add-prologue { //tab切り替えのstyle
     .lp-story_tabs:before {
       width: 4.26667vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: auto;
         right: calc(50% + 45.48611vw);
         left: 0;
@@ -981,7 +1031,7 @@
     }
     .lp-story_tabs:after { //tab切り替えのstyle
       width: 50.66667vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: auto;
         left: calc(50% + -1.04167vw);
         right: 0;
@@ -992,7 +1042,7 @@
   .lp-story.add-main { //tab切り替えのstyle
     .lp-story_tabs:before {
       width: 50.66667vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: auto;
         right: calc(50% + -1.04167vw);
         left: 0;
@@ -1000,7 +1050,7 @@
     }
     .lp-story_tabs:after { //tab切り替えのstyle
       width: 4vw;
-      @include mediaQuery(smallDesktop) {
+      @include mediaQuery {
         width: auto;
         left: calc(50% + 45.48611vw);
         right: 0;
@@ -1016,6 +1066,12 @@
     width: 100%;
     max-width: 1455.55556px;
     margin: 18.66667vw auto auto;
+    @include mediaQuery {
+      width: auto;
+      margin-left: 4.51389vw;
+      margin-right: 4.51389vw;
+      margin-top: 8.33333vw;
+    }
 
     &_bgWrap {
       position: absolute;
@@ -1041,6 +1097,12 @@
         height: 100%;
         background-repeat: repeat-x;
         background-size: 327.45725vw 57.86667vw;
+        @include mediaQuery {
+          background-size: 133.61111vw 23.61111vw;
+        }
+        @include mediaQuery(wideDesktop) {
+          background-size: 2137.77778px 377.77778px
+        }
       }
     }
 
@@ -1053,6 +1115,24 @@
       }
     }
 
+    @keyframes moveBgRightL {
+      0% {
+        background-position: 0;
+      }
+      100% {
+        background-position: 133.61111vw
+      }
+    }
+
+    @keyframes moveBgRightLL {
+      0% {
+        background-position: 0;
+      }
+      100% {
+        background-position: 2137.77778px;
+      }
+    }
+
     @keyframes moveBgLeft {
       0% {
         background-position: 0;
@@ -1062,11 +1142,35 @@
       }
     }
 
+    @keyframes moveBgLeftL {
+      0% {
+        background-position: 0;
+      }
+      100% {
+        background-position: -133.61111vw;
+      }
+    }
+
+    @keyframes moveBgLeftLL {
+      0% {
+        background-position: 0;
+      }
+      100% {
+        background-position: -2137.77778px;
+      }
+    }
+
     .mod-top {
       background-color: #0e6cb2;
       &:before {
         background-image: url('../../../data/hidari-kikino-eren/images/result_bg1.jpg');
         animation: moveBgRight 30s linear infinite;
+        @include mediaQuery {
+          animation: moveBgRightL 30s linear infinite;
+        }
+        @include mediaQuery(wideDesktop) {
+          animation: moveBgRightLL 30s linear infinite;
+        }
       }
     }
 
@@ -1075,6 +1179,12 @@
       &:before {
         background-image: url('../../../data/hidari-kikino-eren/images/result_bg2.jpg');
         animation: moveBgLeft 30s linear infinite;
+        @include mediaQuery {
+          animation: moveBgLeftL 30s linear infinite;
+        }
+        @include mediaQuery(wideDesktop) {
+          animation: moveBgLeftLL 30s linear infinite;
+        }
       }
     }
 
@@ -1082,22 +1192,30 @@
       position: relative;
       z-index: 3;
       padding: 18.26667vw 4vw 25.33333vw;
-    }
-
-    .lp-resultTitle, .lp-resultDate {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      z-index: 2;
+      @include mediaQuery {
+        padding: 9.96528vw 13.47222vw 10.17361vw;
+      }
     }
 
     .lp-resultTitle {
+      display: flex;
+      z-index: 2;
       margin-bottom: 4vw;
+      @include mediaQuery(mobile) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+      }
+      @include mediaQuery {
+        margin-bottom: 1.66667vw;
+      }
 
       &_inner {
         height: 13.6vw;
         margin-top: -.1em;
+        @include mediaQuery {
+          height: 5.45139vw;
+        }
       }
       &_inner img {
         display: block;
@@ -1117,6 +1235,9 @@
       align-items: flex-start;
       margin-bottom: 9vw;
       z-index: 2;
+      @include mediaQuery {
+        margin-bottom: 20.48611vw;
+      }
 
       &_line {
         position: relative;
@@ -1131,6 +1252,12 @@
         margin-top: -.04em;
         transform: scaleX(0.9);
         transform-origin: center left;
+        @include mediaQuery {
+          font-size: 1.86458vw;
+          line-height: 1.3;
+          padding: .1em .2em;
+          white-space: nowrap;
+        }
       }
 
       &_line:after {
@@ -1153,6 +1280,12 @@
       top: 58vw;
       right: 6.53333vw;
       z-index: 4;
+      @include mediaQuery {
+        width: 14.58333vw;
+        height: 16.5625vw;
+        top: 26.66667vw;
+        right: 13.78472vw;
+      }
     }
 
     .lp-resultImg1, .lp-resultImg2 {
@@ -1165,6 +1298,14 @@
       bottom: 34.66667vw;
       right: 7.46667vw;
       transform: rotate(-3.5deg);
+      @include mediaQuery {
+        width: 22.04861vw;
+        height: 15.03472vw;
+        top: 27.77778vw;
+        left: 16.04167vw;
+        bottom: auto;
+        right: auto;
+      }
     }
 
     .lp-resultImg2 {
@@ -1172,20 +1313,40 @@
       height: 29.6vw;
       bottom: 6.93333vw;
       right: 5.73333vw;
+      @include mediaQuery {
+        width: 28.47222vw;
+        height: 20.3125vw;
+        top: 28.19444vw;
+        left: 37.98611vw;
+        bottom: auto;
+        right: auto;
+        transform: rotate(3deg);
+      }
     }
 
     .lp-resultDate {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      z-index: 2;
       &_label {
         background-color: #e50013;
         position: relative;
         height: 8.4vw;
         z-index: inherit;
+        @include mediaQuery {
+          height: 5.10417vw;
+        }
       }
 
       &_day {
         height: 13.6vw;
         margin-top: -.1em;
         z-index: inherit;
+        @include mediaQuery {
+          height: 9.58333vw
+        }
       }
 
       &_label img, &_day img {
